menu items icons

--- a/src/AnyStatus/Features/Edit/EditWindow.xaml
+++ b/src/AnyStatus/Features/Edit/EditWindow.xaml
@@ -10,7 +10,8 @@
              Width="500"
              WindowStartupLocation="CenterScreen"
              Title="Edit"
-             d:DataContext="{d:DesignInstance Type=local:EditViewModel}" Icon="/AnyStatus;component/Resources/StatusSecurityOK_16x.png">
+             d:DataContext="{d:DesignInstance Type=local:EditViewModel}" 
+             Icon="/AnyStatus;component/Resources/StatusSecurityOK_16x.png">
     <Grid>
 
         <Grid.RowDefinitions>
