--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -15,11 +15,11 @@
              x:Name="ToolWindow">
     <Grid>
         <TreeView Name="TreeView" 
-                      ItemsSource="{Binding Items}" 
-                      Background="Transparent" 
-                      BorderThickness="0" 
-                      Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-
+                  ItemsSource="{Binding Items}" 
+                  Background="Transparent" 
+                  BorderThickness="0" 
+                  PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown"
+                  Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
             <TreeView.ContextMenu>
                 <ContextMenu>
                     
@@ -234,7 +234,8 @@
                 <Style TargetType="TreeViewItem">
                     <Setter Property="Padding" Value="0"/>
                     <Setter Property="Margin" Value="0,3,0,0"/>
-                    <Setter Property="Background" Value="WhiteSmoke"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowTextBrushKey}}"/>
+                    <Setter Property="Background" Value="{DynamicResource {x:Static vsp:EnvironmentColors.SystemButtonFaceBrushKey}}"/>
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
                     <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
                 </Style>
