--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -25,28 +25,26 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
-            <!--<TextBlock FontWeight="Bold" HorizontalAlignment="Left">Health Checks</TextBlock>-->
-            <ListBox
+        <ListBox Grid.Column="0" Grid.Row="0"
                  ItemsSource="{Binding Templates}" 
                  SelectedItem="{Binding SelectedTemplate}" 
                  BorderBrush="{x:Null}"
                  Margin="3">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Name}" Height="40" Padding="12"/>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </StackPanel>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" Height="40" Padding="12"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         
         <GridSplitter Grid.Column="1" Grid.RowSpan="2" Foreground="Gray" HorizontalAlignment="Stretch"/>
-        
+
         <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
-            <TextBlock FontSize="24" Text="{Binding SelectedTemplate.Name}" Margin="15,5,5,5"></TextBlock>
+            <TextBlock FontSize="24" Text="{Binding SelectedTemplate.Name}" Margin="15,5,5,5" />
+            <TextBlock Text="{Binding SelectedTemplate.Description}" Margin="15,5,5,5" />
             <xctk:PropertyGrid Margin="3"
                            ShowSearchBox="False" 
-                           ShowSortOptions="False" 
+                           ShowSortOptions="False"
                            ShowSummary="True"
                            ShowTitle="False"
                            BorderBrush="{x:Null}"
@@ -54,7 +52,7 @@
                            SelectedObject="{Binding SelectedTemplate.Item}"
                            SelectedObjectTypeName="{Binding SelectedTemplate.Name}"/>
         </StackPanel>
-       
+
         <StackPanel Grid.Column="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Command="{Binding AddCommand}" CommandParameter="{Binding SelectedTemplate.Item}" Width="70" Margin="5">Add</Button>
             <Button Command="{Binding CancelCommand}" Width="70" Margin="5">Cancel</Button>
