--- a/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
+++ b/src/AnyStatus/Features/Options/OptionsDialogControl.xaml
@@ -13,11 +13,25 @@
     </UserControl.DataContext>
 
     <ScrollViewer>
-        <Grid>
-            <StackPanel HorizontalAlignment="Left">
-                <Button Width="Auto" Padding="2" Command="{Binding ResetAllSettingsCommand}" Margin="3">Reset all settings</Button>
-            </StackPanel>
-        </Grid>
+        <StackPanel>
+            <GroupBox Header="Privacy" Padding="5" Margin="5">
+                <StackPanel>
+                    <CheckBox IsEnabled="False">Help us improve by sending anonymous data usage</CheckBox>
+                    <TextBlock><Hyperlink NavigateUri="https://github.com/AlonAm/AnyStatus/blob/master/PRIVACY.md" RequestNavigate="Hyperlink_RequestNavigate">Learn more</Hyperlink></TextBlock>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Debug" Padding="5" Margin="5">
+                <StackPanel>
+                    <CheckBox IsEnabled="False">Write debug information in the Output window</CheckBox>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Restore Default Settings" Padding="5" Margin="5">
+                <StackPanel HorizontalAlignment="Left">
+                    <TextBlock Margin="3">Note: This deletes all user-entered information</TextBlock>
+                    <Button HorizontalAlignment="Left" Width="150" Command="{Binding RestoreDefaultSettingsCommand}" Margin="3">Restore Default Settings</Button>
+                </StackPanel>
+            </GroupBox>
+        </StackPanel>
     </ScrollViewer>
 
 </UserControl>
