--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -31,23 +31,21 @@
                   PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown"
                   Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}"
                   theming:ImageThemingUtilities.ImageBackgroundColor="{Binding Background, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushToColorConverter}}">
+            
             <TreeView.ContextMenu>
                 <ContextMenu>
-
-                    <MenuItem Header="New Item..." 
+                    <MenuItem Header=" New Item..." 
                               Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
                         <MenuItem.Icon>
                             <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.NewItem}" />
                         </MenuItem.Icon>
                     </MenuItem>
-
-                    <MenuItem Header="New Folder" 
+                    <MenuItem Header=" New Folder" 
                               Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
                         <MenuItem.Icon>
                             <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.AddFolder}" />
                         </MenuItem.Icon>
                     </MenuItem>
-
                 </ContextMenu>
             </TreeView.ContextMenu>
 
@@ -63,7 +61,7 @@
                         <StackPanel.ContextMenu>
                             <ContextMenu>
 
-                                <MenuItem Header="New Item..." 
+                                <MenuItem Header=" New Item..." 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Icon>
@@ -71,7 +69,7 @@
                                     </MenuItem.Icon>
                                 </MenuItem>
 
-                                <MenuItem Header="New Folder" 
+                                <MenuItem Header=" New Folder" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Icon>
@@ -81,19 +79,37 @@
 
                                 <Separator/>
 
-                                <MenuItem Header="Rename" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                <MenuItem Header=" Move Up"
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveUpCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Rename}" />
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveUp}" />
                                     </MenuItem.Icon>
                                 </MenuItem>
 
-                                <MenuItem Header="Remove" 
+                                <MenuItem Header=" Move Down"
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveDownCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}">
+                                    <MenuItem.Icon>
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveDown}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                
+                                <Separator/>
+
+                                <MenuItem Header=" Delete" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RemoveCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Icon>
                                         <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.DeleteFolder}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                
+                                <MenuItem Header=" Rename" 
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}">
+                                    <MenuItem.Icon>
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Rename}" />
                                     </MenuItem.Icon>
                                 </MenuItem>
 
@@ -121,7 +137,7 @@
                         <StackPanel.ContextMenu>
                             <ContextMenu>
 
-                                <MenuItem Header="Refresh" 
+                                <MenuItem Header=" Refresh" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RefreshItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Style>
@@ -152,7 +168,25 @@
                                     </Separator.Style>
                                 </Separator>
 
-                                <MenuItem Header="Enable" 
+                                <MenuItem Header=" Move Up"
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveUpCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}">
+                                    <MenuItem.Icon>
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveUp}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+
+                                <MenuItem Header=" Move Down"
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveDownCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}">
+                                    <MenuItem.Icon>
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveDown}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                
+                                <Separator/>
+                                
+                                <MenuItem Header=" Enable" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.EnableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Style>
@@ -170,7 +204,7 @@
                                     </MenuItem.Icon>
                                 </MenuItem>
 
-                                <MenuItem Header="Disable" 
+                                <MenuItem Header=" Disable" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.DisableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Style>
@@ -190,7 +224,15 @@
 
                                 <Separator/>
 
-                                <MenuItem Header="Rename" 
+                                <MenuItem Header=" Delete" 
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RemoveCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          CommandParameter="{Binding}">
+                                    <MenuItem.Icon>
+                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Cancel}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                
+                                <MenuItem Header=" Rename" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Icon>
@@ -198,17 +240,9 @@
                                     </MenuItem.Icon>
                                 </MenuItem>
 
-                                <MenuItem Header="Remove" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RemoveCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Cancel}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
                                 <Separator/>
 
-                                <MenuItem Header="Properties" 
+                                <MenuItem Header=" Properties" 
                                           Command="{Binding Path=PlacementTarget.Tag.DataContext.EditItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
                                     <MenuItem.Icon>
